QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Closing the main window while not as an active JACK client, nor under
  a server running state, will just quit the whole application, even
  though the system-tray icon option is in effect.

- The most relevant transport commands (Rewind, Play and Pause) are now
  made available on the main window context popup menu.

- The post-shutdown script is now also being called when using the Stop
  button, whether the jackd server has been started internally or not.
  The initial hard-coded default is now on and set as `killall jackd`
  (as a workaround to an old request from Stephane Letz).

- The main window buttons display is now optional. One can choose
  whether the left, right and/or transport buttons are hidden, making
  it for a total of six different modes for the main window presentation
  (after a much simpler suggestion from Paul Davis and Stephane Letz).

- Added configure support for x86_64 libraries (UNTESTED).


0.2.20   2006-03-05  Featuring patchbay socket forwarding.

- Server path setting now accepts custom command line parameters
  (after a kind suggestion from Jussi Laako).

- The internal XRUN callback notification statistics and reporting has
  been changed to be a bit less intrusive.

- Patchbay socket dialog gets some more eye-candy as icons have been
  added to the client and plug selection (combobox) widgets.

- Connections and patchbay lines coloring has changed just slightly :)

- New patchbay socket forwarding feature. Any patchbay socket can now
  be set to have all its connections replicated (i.e. forwarded) to
  another one, which will behave actively as a clone of the former.
  Forward connections are shown by vertical directed colored lines,
  and can be selected either on socket dialog or from context menu
  (currently experimental, only applicable to input/writable sockets).
