@@ -548,6 +548,7 @@ void qjackctlMainForm::startJack (void)
 	bool bAlsa      = (m_preset.sDriver == "alsa");
 	bool bPortaudio = (m_preset.sDriver == "portaudio");
 	bool bCoreaudio = (m_preset.sDriver == "coreaudio");
+	bool bFreebob   = (m_preset.sDriver == "freebob");
 	for (QStringList::Iterator iter = args.begin(); iter != args.end(); ++iter)
 		m_pJack->addArgument(*iter);
     if (m_preset.bVerbose)
@@ -577,11 +578,13 @@ void qjackctlMainForm::startJack (void)
         m_pJack->addArgument("-c" + QString::number(m_preset.iChan));
     if (bCoreaudio && !m_preset.sInterface.isEmpty())
 	    m_pJack->addArgument("-n" + m_preset.sInterface);
+    if (bFreebob && !m_preset.sInterface.isEmpty())
+	    m_pJack->addArgument("-d" + m_preset.sInterface);	
     if (m_preset.iSampleRate > 0)
         m_pJack->addArgument("-r" + QString::number(m_preset.iSampleRate));
     if (m_preset.iFrames > 0)
         m_pJack->addArgument("-p" + QString::number(m_preset.iFrames));
-    if (bAlsa || bOss) {
+    if (bAlsa || bOss || bFreebob) {
         if (m_preset.iPeriods > 0)
             m_pJack->addArgument("-n" + QString::number(m_preset.iPeriods));
     }
@@ -613,12 +616,6 @@ void qjackctlMainForm::startJack (void)
 		if (m_preset.iOutChannels > 0 && m_preset.iAudio != QJACKCTL_CAPTURE)
 			m_pJack->addArgument("-o" + QString::number(m_preset.iOutChannels));
     }
-	else if (bCoreaudio) {
-		if (m_preset.iInChannels >= 0  && m_preset.iAudio != QJACKCTL_PLAYBACK)
-			m_pJack->addArgument("-i" + QString::number(m_preset.iInChannels));
-		if (m_preset.iOutChannels >= 0 && m_preset.iAudio != QJACKCTL_CAPTURE)
-			m_pJack->addArgument("-o" + QString::number(m_preset.iOutChannels));
-	}
     else if (bOss) {
         if (m_preset.bIgnoreHW)
             m_pJack->addArgument("-b");
@@ -637,6 +634,22 @@ void qjackctlMainForm::startJack (void)
         else if (m_preset.iOutChannels > 0)
             m_pJack->addArgument("-o" + QString::number(m_preset.iOutChannels));
     }
+	else if (bCoreaudio) {
+		if (m_preset.iInChannels >= 0  && m_preset.iAudio != QJACKCTL_PLAYBACK)
+			m_pJack->addArgument("-i" + QString::number(m_preset.iInChannels));
+		if (m_preset.iOutChannels >= 0 && m_preset.iAudio != QJACKCTL_CAPTURE)
+			m_pJack->addArgument("-o" + QString::number(m_preset.iOutChannels));
+	}
+	else if (bFreebob) {
+		if (m_preset.iInChannels >= 0  && m_preset.iAudio != QJACKCTL_PLAYBACK)
+			m_pJack->addArgument("-i" + QString::number(m_preset.iInChannels));
+		else
+			m_pJack->addArgument("-i0");
+		if (m_preset.iOutChannels >= 0 && m_preset.iAudio != QJACKCTL_CAPTURE)
+			m_pJack->addArgument("-o" + QString::number(m_preset.iOutChannels));
+		else
+			m_pJack->addArgument("-o0");
+	}
     if (bDummy && m_preset.iWait > 0 && m_preset.iWait != 21333)
         m_pJack->addArgument("-w" + QString::number(m_preset.iWait));
     if (bAlsa || bPortaudio) {
